--- a/src/joint.ipynb
+++ b/src/joint.ipynb
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.306246Z",
-     "start_time": "2024-12-11T16:08:37.299161Z"
+     "end_time": "2024-12-12T14:40:56.886238Z",
+     "start_time": "2024-12-12T14:40:56.882289Z"
     }
    },
    "cell_type": "code",
@@ -51,18 +51,18 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 75
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.325681Z",
-     "start_time": "2024-12-11T16:08:37.320736Z"
+     "end_time": "2024-12-12T14:40:56.894685Z",
+     "start_time": "2024-12-12T14:40:56.892152Z"
     }
    },
    "cell_type": "code",
@@ -77,7 +77,7 @@
    ],
    "id": "d6a19c5d1ead3895",
    "outputs": [],
-   "execution_count": 76
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -88,8 +88,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.383230Z",
-     "start_time": "2024-12-11T16:08:37.379092Z"
+     "end_time": "2024-12-12T14:40:56.933011Z",
+     "start_time": "2024-12-12T14:40:56.930281Z"
     }
    },
    "cell_type": "code",
@@ -101,7 +101,7 @@
    ],
    "id": "906731eda589b4fd",
    "outputs": [],
-   "execution_count": 77
+   "execution_count": 30
   },
   {
    "metadata": {},
@@ -112,8 +112,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.445580Z",
-     "start_time": "2024-12-11T16:08:37.435498Z"
+     "end_time": "2024-12-12T14:40:56.958693Z",
+     "start_time": "2024-12-12T14:40:56.936487Z"
     }
    },
    "cell_type": "code",
@@ -126,7 +126,7 @@
    ],
    "id": "e1c90eee8a28a83",
    "outputs": [],
-   "execution_count": 78
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -147,8 +147,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.499640Z",
-     "start_time": "2024-12-11T16:08:37.496607Z"
+     "end_time": "2024-12-12T14:40:56.980338Z",
+     "start_time": "2024-12-12T14:40:56.977931Z"
     }
    },
    "cell_type": "code",
@@ -160,7 +160,7 @@
    ],
    "id": "88fc6d8ce2188911",
    "outputs": [],
-   "execution_count": 79
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -171,15 +171,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.552447Z",
-     "start_time": "2024-12-11T16:08:37.549773Z"
+     "end_time": "2024-12-12T14:40:56.999994Z",
+     "start_time": "2024-12-12T14:40:56.997964Z"
     }
    },
    "cell_type": "code",
    "source": "T0, TF = 0, 90  # (days)",
    "id": "49e679367cac31b9",
    "outputs": [],
-   "execution_count": 80
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -194,8 +194,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.607766Z",
-     "start_time": "2024-12-11T16:08:37.603435Z"
+     "end_time": "2024-12-12T14:40:57.020773Z",
+     "start_time": "2024-12-12T14:40:57.018102Z"
     }
    },
    "cell_type": "code",
@@ -215,7 +215,7 @@
    ],
    "id": "c21666baaa148c5b",
    "outputs": [],
-   "execution_count": 81
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -226,8 +226,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.662761Z",
-     "start_time": "2024-12-11T16:08:37.658584Z"
+     "end_time": "2024-12-12T14:40:57.041327Z",
+     "start_time": "2024-12-12T14:40:57.038788Z"
     }
    },
    "cell_type": "code",
@@ -241,7 +241,7 @@
    ],
    "id": "a1378579e2dfd159",
    "outputs": [],
-   "execution_count": 82
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -256,8 +256,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:37.767270Z",
-     "start_time": "2024-12-11T16:08:37.762027Z"
+     "end_time": "2024-12-12T14:40:57.063917Z",
+     "start_time": "2024-12-12T14:40:57.060283Z"
     }
    },
    "cell_type": "code",
@@ -269,7 +269,7 @@
    ],
    "id": "c9a60b424aa842cc",
    "outputs": [],
-   "execution_count": 83
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -280,8 +280,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.297370Z",
-     "start_time": "2024-12-11T16:08:37.772727Z"
+     "end_time": "2024-12-12T14:40:57.402627Z",
+     "start_time": "2024-12-12T14:40:57.083893Z"
     }
    },
    "cell_type": "code",
@@ -314,7 +314,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 84
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -333,8 +333,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.379385Z",
-     "start_time": "2024-12-11T16:08:38.372683Z"
+     "end_time": "2024-12-12T14:40:57.424918Z",
+     "start_time": "2024-12-12T14:40:57.422237Z"
     }
    },
    "cell_type": "code",
@@ -359,7 +359,7 @@
    ],
    "id": "ecb23c1e62cf087e",
    "outputs": [],
-   "execution_count": 85
+   "execution_count": 38
   },
   {
    "metadata": {},
@@ -370,8 +370,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.534488Z",
-     "start_time": "2024-12-11T16:08:38.529049Z"
+     "end_time": "2024-12-12T14:40:57.445090Z",
+     "start_time": "2024-12-12T14:40:57.442594Z"
     }
    },
    "cell_type": "code",
@@ -382,7 +382,7 @@
    ],
    "id": "6b71be91134ea908",
    "outputs": [],
-   "execution_count": 86
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -399,8 +399,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.558365Z",
-     "start_time": "2024-12-11T16:08:38.540439Z"
+     "end_time": "2024-12-12T14:40:57.469136Z",
+     "start_time": "2024-12-12T14:40:57.463157Z"
     }
    },
    "cell_type": "code",
@@ -427,7 +427,7 @@
    ],
    "id": "26678127f2b33845",
    "outputs": [],
-   "execution_count": 87
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -444,8 +444,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.650348Z",
-     "start_time": "2024-12-11T16:08:38.645193Z"
+     "end_time": "2024-12-12T14:40:57.489844Z",
+     "start_time": "2024-12-12T14:40:57.487324Z"
     }
    },
    "cell_type": "code",
@@ -461,7 +461,7 @@
    ],
    "id": "62b009c49464688",
    "outputs": [],
-   "execution_count": 88
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -476,15 +476,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.729437Z",
-     "start_time": "2024-12-11T16:08:38.725339Z"
+     "end_time": "2024-12-12T14:40:57.511212Z",
+     "start_time": "2024-12-12T14:40:57.508483Z"
     }
    },
    "cell_type": "code",
    "source": "geom = dde.geometry.TimeDomain(scale_time(T0), scale_time(TF))",
    "id": "3b1ec277d3c7cb2a",
    "outputs": [],
-   "execution_count": 89
+   "execution_count": 42
   },
   {
    "metadata": {},
@@ -495,15 +495,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.789218Z",
-     "start_time": "2024-12-11T16:08:38.786446Z"
+     "end_time": "2024-12-12T14:40:57.533182Z",
+     "start_time": "2024-12-12T14:40:57.530925Z"
     }
    },
    "cell_type": "code",
    "source": "beta_var = dde.Variable(0.5)",
    "id": "22e369f9cc13e482",
    "outputs": [],
-   "execution_count": 90
+   "execution_count": 43
   },
   {
    "metadata": {},
@@ -514,8 +514,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.850991Z",
-     "start_time": "2024-12-11T16:08:38.843751Z"
+     "end_time": "2024-12-12T14:40:57.555269Z",
+     "start_time": "2024-12-12T14:40:57.551470Z"
     }
    },
    "cell_type": "code",
@@ -539,7 +539,7 @@
    ],
    "id": "2562ebc8c92c3f4a",
    "outputs": [],
-   "execution_count": 91
+   "execution_count": 44
   },
   {
    "metadata": {},
@@ -550,8 +550,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.909097Z",
-     "start_time": "2024-12-11T16:08:38.904343Z"
+     "end_time": "2024-12-12T14:40:57.592035Z",
+     "start_time": "2024-12-12T14:40:57.588892Z"
     }
    },
    "cell_type": "code",
@@ -566,7 +566,7 @@
    ],
    "id": "83f3e01007938643",
    "outputs": [],
-   "execution_count": 92
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -577,15 +577,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:38.964793Z",
-     "start_time": "2024-12-11T16:08:38.961746Z"
+     "end_time": "2024-12-12T14:40:57.597908Z",
+     "start_time": "2024-12-12T14:40:57.595638Z"
     }
    },
    "cell_type": "code",
    "source": "observe_I = dde.icbc.PointSetBC(t_train, I_train, component=1)",
    "id": "c9fc004ad69a7c4d",
    "outputs": [],
-   "execution_count": 93
+   "execution_count": 46
   },
   {
    "metadata": {},
@@ -602,8 +602,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:39.029632Z",
-     "start_time": "2024-12-11T16:08:39.018155Z"
+     "end_time": "2024-12-12T14:40:57.623653Z",
+     "start_time": "2024-12-12T14:40:57.616187Z"
     }
    },
    "cell_type": "code",
@@ -621,7 +621,7 @@
    ],
    "id": "94d4fde122d7ce0a",
    "outputs": [],
-   "execution_count": 94
+   "execution_count": 47
   },
   {
    "metadata": {},
@@ -632,15 +632,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:39.087186Z",
-     "start_time": "2024-12-11T16:08:39.082755Z"
+     "end_time": "2024-12-12T14:40:57.645276Z",
+     "start_time": "2024-12-12T14:40:57.642179Z"
     }
    },
    "cell_type": "code",
-   "source": "net = dde.nn.FNN(layer_size, activation, initializer)",
+   "source": "net = dde.nn.pytorch.FNN(layer_size, activation, initializer)",
    "id": "f3358d0126bb6af8",
    "outputs": [],
-   "execution_count": 95
+   "execution_count": 48
   },
   {
    "metadata": {},
@@ -651,8 +651,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:08:39.146663Z",
-     "start_time": "2024-12-11T16:08:39.141967Z"
+     "end_time": "2024-12-12T14:40:57.667703Z",
+     "start_time": "2024-12-12T14:40:57.664719Z"
     }
    },
    "cell_type": "code",
@@ -674,12 +674,12 @@
      "output_type": "stream",
      "text": [
       "Compiling model...\n",
-      "'compile' took 0.000398 s\n",
+      "'compile' took 0.000117 s\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 96
+   "execution_count": 49
   },
   {
    "metadata": {},
@@ -690,8 +690,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:10:36.255108Z",
-     "start_time": "2024-12-11T16:08:39.254615Z"
+     "end_time": "2024-12-12T14:43:25.096605Z",
+     "start_time": "2024-12-12T14:41:21.395087Z"
     }
    },
    "cell_type": "code",
@@ -704,15 +704,7 @@
      "text": [
       "Training model...\n",
       "\n",
-      "Step      Train loss                                            Test loss                                             Test metric   \n",
-      "0         [6.90e-02, 3.14e+05, 1.00e-10, 0.00e+00, 3.18e+03]    [6.70e-02, 3.14e+05, 1.00e-10, 0.00e+00, 3.18e+03]    [1.00e+00]    \n",
-      "1000      [5.27e+00, 2.47e+05, 3.45e-02, 8.48e-05, 3.17e+03]    [5.27e+00, 2.47e+05, 3.45e-02, 8.48e-05, 3.17e+03]    [9.31e-01]    \n",
-      "2000      [5.33e+00, 2.01e+05, 3.53e-02, 2.28e-05, 3.17e+03]    [5.34e+00, 2.01e+05, 3.53e-02, 2.28e-05, 3.17e+03]    [8.87e-01]    \n",
-      "3000      [8.42e+00, 1.61e+05, 9.00e-02, 3.98e-06, 3.16e+03]    [7.90e+00, 1.61e+05, 9.00e-02, 3.98e-06, 3.16e+03]    [8.49e-01]    \n",
-      "4000      [4.18e+01, 1.26e+05, 4.52e-02, 1.00e-04, 2.97e+03]    [4.49e+01, 1.26e+05, 4.52e-02, 1.00e-04, 2.97e+03]    [7.95e-01]    \n",
-      "5000      [7.97e+01, 9.63e+04, 4.13e-02, 6.27e-06, 2.83e+03]    [8.53e+01, 9.63e+04, 4.13e-02, 6.27e-06, 2.83e+03]    [7.51e-01]    \n",
-      "6000      [1.08e+02, 7.09e+04, 1.37e-01, 2.57e-06, 2.66e+03]    [1.16e+02, 7.09e+04, 1.37e-01, 2.57e-06, 2.66e+03]    [6.97e-01]    \n",
-      "7000      [1.21e+02, 4.99e+04, 2.55e-01, 1.01e-05, 2.52e+03]    [1.28e+02, 4.99e+04, 2.55e-01, 1.01e-05, 2.52e+03]    [6.56e-01]    \n",
+      "7477      [1.32e+02, 4.14e+04, 2.22e-01, 9.05e-07, 2.46e+03]    [1.40e+02, 4.14e+04, 2.22e-01, 9.05e-07, 2.46e+03]    [6.42e-01]    \n",
       "8000      [1.36e+02, 3.31e+04, 3.47e-01, 7.56e-07, 2.39e+03]    [1.43e+02, 3.31e+04, 3.47e-01, 7.56e-07, 2.39e+03]    [6.19e-01]    \n",
       "9000      [1.50e+02, 2.02e+04, 2.80e-01, 9.03e-09, 2.28e+03]    [1.60e+02, 2.02e+04, 2.80e-01, 9.03e-09, 2.28e+03]    [5.97e-01]    \n",
       "10000     [1.45e+02, 1.10e+04, 2.93e-01, 3.30e-07, 2.14e+03]    [1.53e+02, 1.10e+04, 2.93e-01, 3.30e-07, 2.14e+03]    [5.65e-01]    \n",
@@ -756,18 +748,26 @@
       "48000     [9.49e+00, 1.19e-04, 1.28e-05, 8.22e-06, 1.37e+00]    [1.45e+01, 1.19e-04, 1.28e-05, 8.22e-06, 1.37e+00]    [7.30e-03]    \n",
       "49000     [2.42e+00, 9.78e-05, 3.74e-06, 1.20e-06, 1.07e+00]    [3.41e+00, 9.78e-05, 3.74e-06, 1.20e-06, 1.07e+00]    [6.34e-03]    \n",
       "50000     [3.33e-01, 1.00e-04, 3.07e-10, 1.60e-08, 8.43e-01]    [4.33e-01, 1.00e-04, 3.07e-10, 1.60e-08, 8.43e-01]    [5.58e-03]    \n",
+      "51000     [2.03e+01, 1.60e-04, 2.33e-05, 4.82e-06, 6.61e-01]    [4.08e+01, 1.60e-04, 2.33e-05, 4.82e-06, 6.61e-01]    [4.96e-03]    \n",
+      "52000     [3.18e-01, 4.51e-05, 1.05e-08, 2.43e-08, 5.43e-01]    [2.29e-01, 4.51e-05, 1.05e-08, 2.43e-08, 5.43e-01]    [4.45e-03]    \n",
+      "53000     [8.87e-01, 5.45e-05, 1.16e-07, 1.22e-07, 4.42e-01]    [8.66e-01, 5.45e-05, 1.16e-07, 1.22e-07, 4.42e-01]    [4.09e-03]    \n",
+      "54000     [2.54e-01, 4.19e-05, 1.66e-08, 1.84e-11, 3.53e-01]    [3.27e-01, 4.19e-05, 1.66e-08, 1.84e-11, 3.53e-01]    [3.58e-03]    \n",
+      "55000     [2.97e-01, 2.95e-05, 1.59e-07, 5.02e-10, 2.87e-01]    [4.37e-01, 2.95e-05, 1.59e-07, 5.02e-10, 2.87e-01]    [3.22e-03]    \n",
+      "56000     [1.05e+00, 2.92e-06, 7.63e-07, 1.53e-08, 2.36e-01]    [1.65e+00, 2.92e-06, 7.63e-07, 1.53e-08, 2.36e-01]    [2.95e-03]    \n",
+      "57000     [2.70e-01, 2.21e-05, 2.67e-08, 6.27e-08, 1.92e-01]    [4.58e-01, 2.21e-05, 2.67e-08, 6.27e-08, 1.92e-01]    [2.62e-03]    \n",
+      "57477     [1.03e+00, 2.38e-05, 1.09e-07, 6.09e-07, 1.74e-01]    [7.00e-01, 2.38e-05, 1.09e-07, 6.09e-07, 1.74e-01]    [2.47e-03]    \n",
       "\n",
-      "Best model at step 50000:\n",
-      "  train loss: 1.18e+00\n",
-      "  test loss: 1.28e+00\n",
-      "  test metric: [5.58e-03]\n",
+      "Best model at step 57000:\n",
+      "  train loss: 4.62e-01\n",
+      "  test loss: 6.50e-01\n",
+      "  test metric: [2.62e-03]\n",
       "\n",
-      "'train' took 116.995807 s\n",
+      "'train' took 123.638653 s\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 97
+   "execution_count": 51
   },
   {
    "metadata": {},
@@ -782,8 +782,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:10:37.032011Z",
-     "start_time": "2024-12-11T16:10:36.320749Z"
+     "end_time": "2024-12-12T14:40:56.414401Z",
+     "start_time": "2024-12-12T14:40:55.903103Z"
     }
    },
    "cell_type": "code",
@@ -833,7 +833,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 98
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -844,8 +844,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:10:37.042821Z",
-     "start_time": "2024-12-11T16:10:37.036650Z"
+     "end_time": "2024-12-12T14:40:56.423596Z",
+     "start_time": "2024-12-12T14:40:56.418990Z"
     }
    },
    "cell_type": "code",
@@ -859,7 +859,7 @@
    ],
    "id": "7d2b3d631b284572",
    "outputs": [],
-   "execution_count": 99
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -870,8 +870,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:10:37.102429Z",
-     "start_time": "2024-12-11T16:10:37.098623Z"
+     "end_time": "2024-12-12T14:40:56.447228Z",
+     "start_time": "2024-12-12T14:40:56.444480Z"
     }
    },
    "cell_type": "code",
@@ -887,7 +887,7 @@
    ],
    "id": "4dc8c70b57b641f5",
    "outputs": [],
-   "execution_count": 100
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -898,8 +898,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T16:10:43.537119Z",
-     "start_time": "2024-12-11T16:10:42.976703Z"
+     "end_time": "2024-12-12T14:40:56.846668Z",
+     "start_time": "2024-12-12T14:40:56.466331Z"
     }
    },
    "cell_type": "code",
@@ -933,7 +933,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 102
+   "execution_count": 27
   }
  ],
  "metadata": {
