chore: improve split

--- a/src/contant_rate/joint/joint.ipynb
+++ b/src/contant_rate/joint/joint.ipynb
@@ -841,6 +841,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# TODO: check if the order is correct\n",
     "columns = [\"$ODE$\", \"$IC_S$\", \"$IC_I$\", \"$IC_R$\", \"$Obs_I$\"]\n",
     "losses = pd.DataFrame(loss_history.loss_train, columns=columns)\n",
     "\n",
