--- a/src/contant_rate/merged/merged.ipynb
+++ b/src/contant_rate/merged/merged.ipynb
@@ -43,12 +43,12 @@
     "\n",
     "load_dotenv()\n",
     "\n",
+    "import re\n",
     "import torch\n",
     "import deepxde as dde\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import re\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.integrate import odeint\n",
     "\n",
@@ -733,6 +733,7 @@
     "  optimizer=second_optimizer,\n",
     "  loss=loss_function\n",
     ")\n",
+    "\n",
     "loss_history, train_state = model.train(\n",
     "  iterations=iterations,\n",
     "  batch_size=batch_size\n",
@@ -825,7 +826,6 @@
    },
    "cell_type": "code",
    "source": [
-    "# TODO: check if the order is correct\n",
     "columns = [\"$ODE$\", \"$IC_S$\", \"$IC_I$\", \"$IC_R$\", \"$Obs_I$\"]\n",
     "losses = pd.DataFrame(loss_history.loss_train, columns=columns)\n",
     "\n",
@@ -931,7 +931,7 @@
    "source": [
     "### Predictions\n",
     "\n",
-    "Generate predictions using the trained model and true values"
+    "Generate true solution to test the model."
    ],
    "id": "56716ff7a9248e9c"
   },
